# libprocesswrangler

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
include/: process_wrangler.h
src/: process_wrangler.c  pw_error.c  pw_error.h
test/: main.c
